# cpp19

bmp_editor/: Makefile
bmp_editor/include/: stego.h
bmp_editor/src/: bmp.c
huffman/include/: CLI.h
huffman/src/: Huffman.cpp
huffman/test/: TestCli.h  TestMain.cpp  UnitTests.h
hw_01/include/: bmp.h
hw_01/src/: main.c  stego.c
hw_03/: CMakeLists.txt
hw_03/include/: Huffman.h  HuffmanArchiver.h
hw_03/src/: CLI.cpp  HuffmanArchiver.cpp  main.cpp
hw_03/test/: TestCases.h
